[gd_scene load_steps=26 format=3 uid="uid://c7gsbegdxii8h"]

[ext_resource type="PackedScene" uid="uid://cfhr6q7yvly0r" path="res://player/player_staff.tscn" id="1_aho7j"]
[ext_resource type="Script" path="res://player/player.gd" id="1_cuhy1"]
[ext_resource type="Texture2D" uid="uid://bxgbqgyxbn3aa" path="res://player/player-idle.png" id="1_s6cls"]
[ext_resource type="PackedScene" uid="uid://cofgm0wdeiy7f" path="res://components/health_component.tscn" id="2_xpi4e"]
[ext_resource type="PackedScene" uid="uid://b885o33noq7q8" path="res://components/hitbox_component.tscn" id="3_v7n6x"]
[ext_resource type="PackedScene" uid="uid://bamq0fme31vqo" path="res://components/movements/movement_component.tscn" id="4_tilyf"]
[ext_resource type="Script" path="res://components/inputs/player_input_component.gd" id="5_rt4w6"]
[ext_resource type="PackedScene" uid="uid://dyvi2bgeqosjm" path="res://misc/bullets/bullet.tscn" id="7_3bfyn"]
[ext_resource type="PackedScene" uid="uid://ler4fjt2kf6k" path="res://components/attack_shooting_component.tscn" id="7_tcyue"]
[ext_resource type="PackedScene" uid="uid://dg8iyvp133ss3" path="res://components/movements/rotate_target_and_follow_mouse_component.tscn" id="10_1e23t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e4qlh"]
atlas = ExtResource("1_s6cls")
region = Rect2(0, 80, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugqh3"]
atlas = ExtResource("1_s6cls")
region = Rect2(32, 80, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbfhw"]
atlas = ExtResource("1_s6cls")
region = Rect2(64, 80, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_o30tr"]
atlas = ExtResource("1_s6cls")
region = Rect2(96, 80, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywcir"]
atlas = ExtResource("1_s6cls")
region = Rect2(0, 0, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqyak"]
atlas = ExtResource("1_s6cls")
region = Rect2(32, 0, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4piy"]
atlas = ExtResource("1_s6cls")
region = Rect2(64, 0, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_40bts"]
atlas = ExtResource("1_s6cls")
region = Rect2(96, 0, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejp5d"]
atlas = ExtResource("1_s6cls")
region = Rect2(0, 40, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s84g"]
atlas = ExtResource("1_s6cls")
region = Rect2(32, 40, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko8vr"]
atlas = ExtResource("1_s6cls")
region = Rect2(64, 40, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_cslru"]
atlas = ExtResource("1_s6cls")
region = Rect2(96, 40, 32, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_076u1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4qlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugqh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbfhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o30tr")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywcir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqyak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4piy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40bts")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejp5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s84g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko8vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cslru")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_iack1"]
radius = 6.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t6ao0"]
radius = 7.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(0, -17)
collision_mask = 2
motion_mode = 1
script = ExtResource("1_cuhy1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, 0)
sprite_frames = SubResource("SpriteFrames_076u1")
animation = &"front_idle"
autoplay = "front_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("CircleShape2D_iack1")

[node name="HealthComponent" parent="." instance=ExtResource("2_xpi4e")]

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_v7n6x")]
collision_mask = 0
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_t6ao0")
debug_color = Color(1, 0.2486, 0.582651, 0.42)

[node name="MovementComponent" parent="." node_paths=PackedStringArray("target", "input") instance=ExtResource("4_tilyf")]
target = NodePath("..")
input = NodePath("../PlayerInputComponent")

[node name="PlayerInputComponent" type="Node2D" parent="."]
script = ExtResource("5_rt4w6")
deadzone = null

[node name="AttackShootingComponent" parent="." node_paths=PackedStringArray("marker", "input") instance=ExtResource("7_tcyue")]
marker = NodePath("../PlayerStaff/Marker2D")
input = NodePath("../PlayerInputComponent")
bullet = ExtResource("7_3bfyn")

[node name="PlayerStaff" parent="." node_paths=PackedStringArray("player") instance=ExtResource("1_aho7j")]
position = Vector2(21, 5)
player = NodePath("..")

[node name="RotateTargetAndFollowMouseComponent3" parent="PlayerStaff" node_paths=PackedStringArray("target", "rotate_center_target") instance=ExtResource("10_1e23t")]
radius = 18.0
target = NodePath("..")
rotate_center_target = NodePath("../..")

[node name="Marker2D" type="Marker2D" parent="PlayerStaff"]
position = Vector2(0, -12)
